✨ 회원가입 관련 API 연결
회원가입, 이메일 인증 코드 API 연결 및 프록시 설정

--- a/package.json
+++ b/package.json
@@ -56,5 +56,6 @@
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3"
-  }
+  },
+  "proxy": "http://dev-vote.rflxn.xyz:19990/api/"
 }
